# ring-rs

./: Cargo.toml
bench/: Cargo.toml  aead.rs  agreement.rs  digest.rs  ecdsa.rs
cavp/: Cargo.toml
src/: aead.rs  limb.rs
src/aead/: aes.rs  chacha.rs  poly1305.rs
src/aead/aes/: bs.rs  ffi.rs  hw.rs  vp.rs
src/aead/aes_gcm/: aarch64.rs  aeshwclmulmovbe.rs  vaesclmulavx2.rs
src/aead/chacha20_poly1305/: integrated.rs
src/aead/gcm/: clmul_aarch64.rs  clmul_x86.rs  clmul_x86_64.rs  clmulavxmovbe.rs  neon.rs  vclmulavx2.rs
src/aead/gcm/fallback/: mod.rs
src/aead/poly1305/: arm_neon.rs
src/arithmetic/: ffi.rs  montgomery.rs
src/arithmetic/bigint/: elem.rs  exp.rs
src/arithmetic/bigint/modulus/: mont.rs
src/arithmetic/limbs/aarch64/: mont.rs
src/arithmetic/limbs/fallback/: mont.rs
src/arithmetic/limbs/x86_64/: mont.rs
src/arithmetic/limbs512/: scatter.rs  storage.rs
src/cpu/aarch64/: darwin.rs
src/ec/curve25519/: ops.rs
src/ec/curve25519/ed25519/: signing.rs
src/ec/suite_b/ops/: p256.rs  p384.rs
src/polyfill/: array_split_map.rs
src/rsa/base/: public_exponent.rs
src/tests/: bb_bytes_tests.rs  c_constant_time_tests.rs
src/tests/polyfill_tests/: uninit_slice_tests.rs
