[package]
edition.workspace = true
name = "ring-bench"
publish = false
rust-version.workspace = true
version = "0.1.0"

[dependencies]
ring = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "aead"
harness = false
path = "aead.rs"

[[bench]]
name = "agreement"
harness = false
path = "agreement.rs"

[[bench]]
name = "digest"
harness = false
path = "digest.rs"

[[bench]]
name = "ecdsa"
harness = false
path = "ecdsa.rs"

[[bench]]
name = "rsa"
harness = false
path = "rsa.rs"
